Overflow fix

--- a/src/_gridflexbox.scss
+++ b/src/_gridflexbox.scss
@@ -65,7 +65,7 @@ $grid-fixed-width: (
         }
     }
 
-    .col-overflow {
+    .col-prevent-overflow {
         overflow: visible;
     }
 
